Prevent tag names from being wrapped in the entry list page

--- a/res/style.css
+++ b/res/style.css
@@ -50,7 +50,7 @@ h3 { font-size: 120%; }
 }
 
 #main {
-  width: 75%;
+  width: 72%;
   float: left;
   padding: 10px 25px 70px;
 }
@@ -61,7 +61,7 @@ h3 { font-size: 120%; }
 
 #side {
   text-align: right;
-  margin-left: 80%;
+  margin-left: 77%;
   padding: 10px 25px 70px 0;
 }
 
